refactor:#250 알러지,비선호 응답 dto 추가